[package]
authors = ['Joystream contributors']
edition = '2018'
name = 'joystream-node-runtime'
# Follow convention: https://github.com/Joystream/substrate-runtime-joystream/issues/1
# {Authoring}.{Spec}.{Impl} of the RuntimeVersion
version = '12.2004.0'

[dependencies]
# Third-party dependencies
serde = { workspace = true, features = ["derive"], optional = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
getrandom = { workspace = true, features = ["js"] }
lite-json = { workspace = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
    'derive',
] }
scale-info = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
log = { workspace = true }
static_assertions = { workspace = true }
impl-serde = { workspace = true, optional = true }

# Substrate primitives
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-offchain = { workspace = true }
sp-core = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-session = { workspace = true }
sp-block-builder = { workspace = true }
sp-api = { workspace = true }
sp-version = { workspace = true }
sp-staking = { workspace = true }
sp-application-crypto = { workspace = true }
sp-io = { workspace = true }
sp-weights = { workspace = true }

# Frame
frame-support = { workspace = true }
frame-executive = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-system = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-bags-list = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }

# Pallets
pallet-grandpa = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-babe = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-offences = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-staking = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-im-online = { workspace = true }
substrate-utility = { package = 'pallet-utility', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '1d0eefca86ef31b9e7727df01a6ed23ad65491e9' }
pallet-vesting = { workspace = true }
pallet-multisig = { workspace = true }
pallet-staking-runtime-api = { workspace = true }
pallet-proxy = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
pallet-offences-benchmarking = { workspace = true, optional = true }
pallet-session-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
pallet-election-provider-support-benchmarking = { workspace = true, optional = true }

# Joystream
common = { package = 'pallet-common', default-features = false, path = '../runtime-modules/common' }
forum = { package = 'pallet-forum', default-features = false, path = '../runtime-modules/forum' }
membership = { package = 'pallet-membership', default-features = false, path = '../runtime-modules/membership' }
referendum = { package = 'pallet-referendum', default-features = false, path = '../runtime-modules/referendum' }
council = { package = 'pallet-council', default-features = false, path = '../runtime-modules/council' }
working-group = { package = 'pallet-working-group', default-features = false, path = '../runtime-modules/working-group' }
storage = { package = 'pallet-storage', default-features = false, path = '../runtime-modules/storage' }
proposals-engine = { package = 'pallet-proposals-engine', default-features = false, path = '../runtime-modules/proposals/engine' }
proposals-discussion = { package = 'pallet-proposals-discussion', default-features = false, path = '../runtime-modules/proposals/discussion' }
proposals-codex = { package = 'pallet-proposals-codex', default-features = false, path = '../runtime-modules/proposals/codex' }
pallet-constitution = { workspace = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../runtime-modules/staking-handler' }
bounty = { package = 'pallet-bounty', default-features = false, path = '../runtime-modules/bounty' }
content = { package = 'pallet-content', default-features = false, path = '../runtime-modules/content' }
joystream-utility = { package = 'pallet-joystream-utility', default-features = false, path = '../runtime-modules/utility' }
project-token = { package = 'pallet-project-token', default-features = false, path = '../runtime-modules/project-token' }
argo-bridge = { package = 'pallet-argo-bridge', default-features = false, path = '../runtime-modules/argo-bridge' }

[dev-dependencies]
sp-io = { workspace = true }
strum = { workspace = true }
remote-externalities = { package = "frame-remote-externalities", git = 'https://github.com/joystream/substrate.git', rev = '1d0eefca86ef31b9e7727df01a6ed23ad65491e9' }
tokio = { workspace = true, features = ["macros"] }
sp-tracing = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ['std']
std = [
    # Third-party dependencies
    'serde',
    'codec/std',
    'scale-info/std',
    'impl-serde/std',

    # Substrate primitives
    'sp-std/std',
    'sp-core/std',
    'sp-weights/std',
    'sp-api/std',
    'sp-version/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-offchain/std',
    'sp-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-transaction-pool/std',
    'sp-block-builder/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-application-crypto/std',
    'sp-io/std',

    # Frame
    'frame-support/std',
    'frame-executive/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-election-provider-support/std',
    'frame-benchmarking/std',
    'pallet-offences-benchmarking?/std',
    'frame-system-benchmarking?/std',
    'frame-try-runtime/std',

    # Pallets
    'pallet-timestamp/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-grandpa/std',
    'pallet-babe/std',
    'pallet-session/std',
    'pallet-session-benchmarking?/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-insecure-randomness-collective-flip/std',
    'pallet-staking/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-vesting/std',
    'pallet-multisig/std',
    'substrate-utility/std',
    'pallet-bags-list/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-election-provider-support-benchmarking?/std',
    'pallet-staking-runtime-api/std',
    'pallet-proxy/std',

    # Joystream
    'common/std',
    'forum/std',
    'membership/std',
    'council/std',
    'referendum/std',
    'working-group/std',
    'storage/std',
    'proposals-engine/std',
    'proposals-discussion/std',
    'proposals-codex/std',
    'pallet-constitution/std',
    'staking-handler/std',
    'bounty/std',
    'joystream-utility/std',
    'content/std',
    'project-token/std',
    'argo-bridge/std',
    'log/std',
]
runtime-benchmarks = [
    "playground-runtime",
    "hex-literal",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",

    # Substrate pallets
    "pallet-offences-benchmarking/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-session-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-bags-list/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "substrate-utility/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-election-provider-support-benchmarking/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",

    # Joystream
    "common/runtime-benchmarks",
    "proposals-discussion/runtime-benchmarks",
    "proposals-engine/runtime-benchmarks",
    "proposals-codex/runtime-benchmarks",
    "joystream-utility/runtime-benchmarks",
    "pallet-constitution/runtime-benchmarks",
    "working-group/runtime-benchmarks",
    "forum/runtime-benchmarks",
    "membership/runtime-benchmarks",
    "council/runtime-benchmarks",
    "referendum/runtime-benchmarks",
    "bounty/runtime-benchmarks",
    'storage/runtime-benchmarks',
    'content/runtime-benchmarks',
    "project-token/runtime-benchmarks",
    "argo-bridge/runtime-benchmarks",
]

# Configuration suitable for staging networks and playground
staging-runtime = []
playground-runtime = []
# Configuration suitable for automated integration testing only
testing-runtime = ["fast-block-production"]

# Default block production interval is 6s. Enabling this feature will configure chain for 1s interval instead.
fast-block-production = []

# Configures 1s block interval for the chain, but changes behaviour of `minutes!`, `hours!`, `days!` util macros
# to compute periods (in blocks) based on 6s block interval.
# This configuration is meant for QA (manual testing) of production runtime configuration.
# that has long time periods for things like council elections, proposals voting periods etc.
# Enabling warp-time with playground-runtime, staging-runtime or testing-runtime will most likely result in time periods to be too
# short (in real time sense) and beyond practicality.
warp-time = ["fast-block-production"]

try-runtime = [
    "frame-try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-authority-discovery/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-vesting/try-runtime",
    "substrate-utility/try-runtime",
    "pallet-proxy/try-runtime",
    # joystream
    'forum/try-runtime',
    'membership/try-runtime',
    'council/try-runtime',
    'referendum/try-runtime',
    'working-group/try-runtime',
    'storage/try-runtime',
    'proposals-engine/try-runtime',
    'proposals-discussion/try-runtime',
    'proposals-codex/try-runtime',
    'pallet-constitution/try-runtime',
    'bounty/try-runtime',
    'joystream-utility/try-runtime',
    'content/try-runtime',
    'project-token/try-runtime',
    'argo-bridge/try-runtime',
]
