[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['joystream-node-runtime/std']

[dependencies.joystream-node-runtime]
default-features = false
path = '..'

[package]
authors = ['Joystream']
edition = '2018'
name = 'joystream-node-runtime-wasm'
version = '5.3.0'
