[package]
name = 'pallet-bounty'
version = '2.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
balances = { workspace = true }
sp-runtime = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
static_assertions = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
council = { package = 'pallet-council', default-features = false, path = '../council'}
referendum = { package = 'pallet-referendum', default-features = false, path = '../referendum'}
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
sp-core = { workspace = true }

[dev-dependencies]
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
council = { package = 'pallet-council', default-features = false, path = '../council'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}

[features]
default = ['std']
runtime-benchmarks = [
	"common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"council/runtime-benchmarks",
	"membership/runtime-benchmarks",
]

std = [
	'serde',
	'codec/std',
	'sp-arithmetic/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'sp-runtime/std',
	'common/std',
	'membership/std',
	'referendum/std',
	'council/std',
	'staking-handler/std',
	'frame-benchmarking?/std',
]
try-runtime = [ "frame-support/try-runtime"]
