[package]
name = 'substrate-bureaucracy-module'
version = '1.0.0'
authors = ['Joystream contributors']
edition = '2018'

[features]
default = ['std']
std = [
	'sr-primitives/std',
	'srml-support/std',
	'system/std',
	'codec/std',
	'rstd/std',
	'serde',
    'hiring/std',
    'stake/std'
]


[dependencies]
codec = { package = 'parity-scale-codec', version = '1.0.0', default-features = false, features = ['derive'] }
primitives = { package = 'substrate-primitives', git = 'https://github.com/paritytech/substrate.git', rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'}
rstd = { package = 'sr-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'}


[dev-dependencies]
runtime-io = { package = 'sr-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'}

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.hiring]
default_features = false
package = 'substrate-hiring-module'
path = '../hiring'

[dependencies.stake]
default_features = false
package = 'substrate-stake-module'
path = '../stake'