[package]
name = 'pallet-common'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
	'derive',
] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-arithmetic = { workspace = true }
balances = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
parameterized = { workspace = true }

[features]
default = ['std']
test = []
runtime-benchmarks = []
std = [
	'serde',
	'strum',
	'strum_macros',
	'codec/std',
	'sp-runtime/std',
	'sp-arithmetic/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-timestamp/std',
	'balances/std',
	'scale-info/std',
]
