[package]
name = 'pallet-common'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
strum = { version = "0.19", optional = true }
strum_macros = { version = "0.19", optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
	'derive',
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }

[dev-dependencies]
parameterized = { version = "1.1.0" }

[features]
default = ['std']
test = []
runtime-benchmarks = []
std = [
	'serde',
	'strum',
	'strum_macros',
	'codec/std',
	'sp-runtime/std',
	'sp-arithmetic/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-timestamp/std',
	'balances/std',
	'scale-info/std',
]
